hphp/test/quick/redecl_abstract_method2.php.expectf

Fatal error: Cannot re-declare non-abstract method B::foo() abstract in class C in %s on line 7
